[package]
name = "udp_forwarder"
version = "0.1.0"
authors = ["Simon Wimmesberger <simon.wimmesberger@zoetis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["full"] }
clap = "2.33.0"
bytes = "0.5"
crossbeam-channel = "0.4"
net2 = "0.2"
num-format = { version = "0.4.0" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["mswsock"] }